Create endpoint to download order
