# internal/auth/model/user.go
@@ -11,9 +11,9 @@ type User struct {
 	ID        string
 	FirstName string
 	LastName  string
-	Email    string
-	Role     UserRole
-	Password string
+	Email     string
+	Role      UserRole
+	Password  string
 	CreatedAt int64
 }
 
